➕⚠🎉 Added authentication and fixed swagger
