# swagger_output.json
@@ -2,35 +2,328 @@
   "swagger": "2.0",
   "info": {
     "version": "1.0.0",
-    "title": "REST API",
-    "description": ""
+    "title": "r-inspect API Documentation",
+    "description": "API Documentation for the r-inspect API"
   },
-  "host": "localhost:8080",
+  "host": "localhost:3000",
   "basePath": "/",
   "schemes": [
-    "http"
+    "http",
+    "https"
+  ],
+  "securityDefinitions": {
+    "rInspectApiKey": {
+      "type": "apiKey",
+      "in": "header",
+      "name": "x-api-key",
+      "description": "Constant api key \"r-inspect\" is required to access the API endpoints."
+    },
+    "bearerAuth": {
+      "type": "apiKey",
+      "in": "header",
+      "name": "Authorization",
+      "description": "Admin secret key is required to access the admin endpoints."
+    },
+    "adminSecretKey": {
+      "type": "apiKey",
+      "in": "header",
+      "name": "admin-secret-key",
+      "description": "Admin secret key is required to access the admin endpoints."
+    }
+  },
+  "consumes": [
+    "application/json"
+  ],
+  "produces": [
+    "application/json"
   ],
   "paths": {
     "/": {
       "get": {
-        "description": "",
+        "tags": [
+          "Home"
+        ],
+        "description": "Endpoint to retrieve the home page.",
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        }
+      }
+    },
+    "/users/signup": {
+      "post": {
+        "tags": [
+          "User"
+        ],
+        "description": "Endpoint to register a new user.",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "username": {
+                  "example": "any"
+                },
+                "password": {
+                  "example": "any"
+                },
+                "role": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/users/login": {
+      "post": {
+        "tags": [
+          "User"
+        ],
+        "description": "Endpoint for user login.",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "username": {
+                  "example": "any"
+                },
+                "password": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
           "500": {
             "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/users/refresh-token": {
+      "post": {
+        "tags": [
+          "User"
+        ],
+        "description": "Endpoint to refresh access token.",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "refreshToken": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
           },
-          "default": {
-            "description": ""
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        }
+      }
+    },
+    "/users/logout": {
+      "post": {
+        "tags": [
+          "User"
+        ],
+        "description": "Endpoint to log out a user.",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "refreshToken": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Logged out successfully."
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        }
+      }
+    },
+    "/users/admin/users": {
+      "get": {
+        "tags": [
+          "admin"
+        ],
+        "description": "Endpoint to retrieve a list of all users.",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/teams/": {
+      "get": {
+        "tags": [
+          "Teams"
+        ],
+        "description": "Endpoint to retrieve a list of all teams.",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/inspector/": {
+      "post": {
+        "tags": [
+          "Inspector"
+        ],
+        "summary": "Add a new inspector to the database",
+        "description": "Endpoint to add a new inspector to the database.",
+        "responses": {
+          "204": {
+            "description": "Inspector created successfully."
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Error occurred while creating the inspector."
           }
         }
       },
+      "get": {
+        "tags": [
+          "Inspector"
+        ],
+        "summary": "Retrieve all inspectors",
+        "description": "Endpoint to retrieve a list of all inspectors from the database.",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/inspection/": {
       "post": {
-        "description": "",
+        "tags": [
+          "Inspection"
+        ],
+        "description": "Creates a new inspection with the provided details.",
         "responses": {
           "204": {
-            "description": "No Content"
+            "description": "Inspection created successfully."
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Error occurred while creating the inspection."
+          }
+        }
+      },
+      "get": {
+        "tags": [
+          "Inspection"
+        ],
+        "description": "Retrieves a list of all inspections.",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
           },
           "500": {
             "description": "Internal Server Error"
@@ -38,7 +331,10 @@
         }
       },
       "patch": {
-        "description": "",
+        "tags": [
+          "Inspection"
+        ],
+        "description": "Updates an existing inspection based on the team number.",
         "parameters": [
           {
             "name": "body",
@@ -61,10 +357,48 @@
         ],
         "responses": {
           "201": {
-            "description": "Created"
+            "description": "Inspection updated successfully."
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
           },
           "500": {
-            "description": "Internal Server Error"
+            "description": "Error occurred while updating the inspection."
+          }
+        }
+      }
+    },
+    "/admin/CreateCleanSheetsForTeams": {
+      "get": {
+        "tags": [
+          "admin"
+        ],
+        "description": "Endpoint to create clean sheets for all teams. Requires admin secret key for authorization.",
+        "parameters": [
+          {
+            "name": "admin-secret-key",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Clean sheets for all teams created successfully."
+          },
+          "400": {
+            "description": "Inspections table must be empty before running this operation or no teams found to create clean sheets for."
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Unauthorized access."
+          },
+          "500": {
+            "description": "Failed to create clean sheets for teams."
           }
         }
       }
